--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 h1 {
 
+    text-align: center;
     font-family: 'Space Mono', monospace;
     font-size: 70px;
     font-weight: bold;
@@ -16,5 +17,11 @@ h1 {
 .btn {
 
     background-color: lightblue !important;
+
+}
+
+#error {
+
+    max-width: 80px;
 
 }
