--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,18 @@ h1 {
 
 }
 
-h2,
+h2 {
+
+    margin-left: 15px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+
+}
+
 h3 {
 
-    margin-left: 5px;
+    font-family: 'Montserrat', sans-serif;
+    margin-left: 15px;
 
 }
 
@@ -45,26 +53,34 @@ h3 {
 .form-control-sm {
 
     max-width: 50%;
-    margin-left: 5px;
+    margin-left: 15px;
 
 }
 
-textarea {
+#taskDescrip {
 
     max-width: 50%;
-    margin-left: 5px;
+    margin-left: 15px;
 
 }
 
 #addTaskButton {
 
-    margin-left: 5px;
+    margin-left: 15px;
 
 }
 
 .btn {
 
+    font-family: 'Montserrat', sans-serif;
     background-color: #49D49D !important;
+
+}
+
+.card {
+
+
+    min-width: 350px;
 
 }
 
