--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ h1 {
     font-family: 'Space Mono', monospace;
     font-size: 70px;
     font-weight: bold;
+    margin-bottom: 15px;
 
 }
 
@@ -67,6 +68,16 @@ h3 {
 
 }
 
+#status-badge {
+
+    width: 50%;
+    height: 30%;
+    font-size: 1em;
+    margin-top: 5.5px;
+    font-weight: 700;
+
+}
+
 #addTaskButton {
 
     margin-left: 15px;
@@ -99,8 +110,60 @@ h3 {
     bottom: 0;
     background-color: mediumaquamarine;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     width: 100%;
     height: 5%;
     text-align: center;
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
