--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+html {
+
+    background-color: mediumaquamarine;
+
+}
+
 body {
 
     background-color: #95F9E3;
@@ -23,10 +29,15 @@ h2 {
 
 }
 
+#dateTitle {
+
+    margin-left: 15px;
+
+}
+
 h3 {
 
     font-family: 'Montserrat', sans-serif;
-    margin-left: 15px;
 
 }
 
@@ -40,7 +51,7 @@ h3 {
 }
 
 /* area around the date picker input */
-.datePickerArea {
+.container-fluid {
 
     background-color: #95F9E3; 
     margin-left: 0;
@@ -52,20 +63,6 @@ h3 {
     display: flex;
     justify-content: space-between;
     
-}
-
-.form-control-sm {
-
-    max-width: 50%;
-    margin-left: 15px;
-
-}
-
-#taskDescrip {
-
-    max-width: 50%;
-    margin-left: 15px;
-
 }
 
 #status-badge {
@@ -80,7 +77,7 @@ h3 {
 
 #addTaskButton {
 
-    margin-left: 15px;
+    margin-left: 20px;
 
 }
 
@@ -106,7 +103,6 @@ h3 {
 
 #footer {
 
-    position: fixed;
     bottom: 0;
     background-color: mediumaquamarine;
     font-family: 'Montserrat', sans-serif;
@@ -117,53 +113,12 @@ h3 {
 
 }
 
+@media screen and (max-width: 576px) {
 
+    .taskCard {
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        display: flex;
+        justify-content: center;
+    
+    }
+}
